deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaaladin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vaaladin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: vaaladin
    spec:
      automountServiceAccountToken: false
      containers:
        - name: vaaladin
          image: vaaladin
          imagePullPolicy: "Never"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8080
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: vaaladin-service
spec:
  selector:
    app: vaaladin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaaladin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
    - host: vaaladin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaaladin-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
